[package]
name = "fast_hdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = { version = "3.2.16", features = ["derive"] }
csv = "1.1.6"
flate2 = "1.0.24"
hdrhistogram = { version = "7.5.0", features = ["serialization"] }
thiserror = "1.0.32"
